# mov-cli-next

core/: pyproject.toml
core/examples/fs-plugin/: __init__.py  manifest.toml
core/examples/simple-cli/: main.py  pyproject.toml
core/mov_core/: errors.py  protocols.toml  protocols_def.toml
core/mov_core/api/: __init__.py
core/mov_core/api/v1/: __init__.py  api.py  metadata.py
core/mov_core/api/v1/protocols/: __init__.py  search.py  watch.py
core/mov_core/plugins/: loader.py  manifest.py  plugin.py
core/mov_core/runtime/: dispatcher.py
core/mov_core/runtime/dispatcher/: __init__.py  base.py  protocol_dispatcher.py
core/mov_core/types/: __init__.py  manifest.py  protocol_literals.py
